feat: Bond v0.2 - Real-time market data streaming platform
- Natural language stream creation
- Multi-source aggregation (crypto, on-chain, Twitter)
- WebSocket streaming with HMAC auth
- Ring buffer replay
- Python SDK
- Apache-2.0 license

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,9 @@ bond-*.whl
 # IDE specific
 .vscode/settings.json
 .idea/workspace.xml
+
+# Internal documentation (not for public repo)
+CLAUDE.md
+PROJECT_SUMMARY.md
+PUBLISH.md
+NOTICE
