--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -50,7 +50,7 @@ services:
         condition: service_healthy
     volumes:
       - ..:/app
-    command: uvicorn apps.broker.broker:app --host 0.0.0.0 --port 8080 --reload
+    command: uvicorn apps.broker.broker:app --host 0.0.0.0 --port 8080
 
 volumes:
   redis_data:
