--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@ builder = "DOCKERFILE"
 dockerfilePath = "infra/Dockerfile.api"
 
 [deploy]
-startCommand = "uvicorn apps.api.main:app --host 0.0.0.0 --port 8000"
+startCommand = "bash /start-api.sh"
 healthcheckPath = "/health"
 healthcheckTimeout = 1000
 restartPolicyType = "ON_FAILURE"
