--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,9 @@
 [build]
 builder = "DOCKERFILE"
-dockerfilePath = "infra/Dockerfile.api"
+dockerfilePath = "infra/Dockerfile.broker"
 
 [deploy]
-startCommand = "bash /start-api.sh"
+startCommand = "uvicorn apps.broker.broker:app --host 0.0.0.0 --port 8080"
 healthcheckPath = "/health"
 healthcheckTimeout = 1000
 restartPolicyType = "ON_FAILURE"
