--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@ builder = "DOCKERFILE"
 dockerfilePath = "infra/Dockerfile.broker"
 
 [deploy]
-startCommand = "uvicorn apps.broker.broker:app --host 0.0.0.0 --port 8080"
+startCommand = "uvicorn apps.api.main:app --host 0.0.0.0 --port ${PORT:-8000}"
 healthcheckPath = "/health"
 healthcheckTimeout = 1000
 restartPolicyType = "ON_FAILURE"
