--- a/infra/Dockerfile.broker
+++ b/infra/Dockerfile.broker
@@ -10,8 +10,12 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application code
 COPY . .
 
+# Copy startup script (shared with API for parity in Railway)
+COPY infra/start-api.sh /start-api.sh
+RUN chmod +x /start-api.sh
+
 # Expose port
 EXPOSE 8080
 
 # Run broker server
-CMD ["uvicorn", "apps.broker.broker:app", "--host", "0.0.0.0", "--port", "8080"]
+CMD ["/start-api.sh", "broker"]
