--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,9 @@
 [build]
 builder = "DOCKERFILE"
-dockerfilePath = "infra/Dockerfile.broker"
+dockerfilePath = "infra/Dockerfile.api"
 
 [deploy]
-startCommand = "bash /start-api.sh broker"
+startCommand = "bash /start-api.sh"
 healthcheckPath = "/health"
 healthcheckTimeout = 1000
 restartPolicyType = "ON_FAILURE"
