--- a/infra/Dockerfile.broker
+++ b/infra/Dockerfile.broker
@@ -15,7 +15,7 @@ COPY infra/start-api.sh /start-api.sh
 RUN chmod +x /start-api.sh
 
 # Expose port
-EXPOSE $PORT
+EXPOSE 8080
 
 # Run broker server
 CMD ["/start-api.sh", "broker"]
