--- a/infra/Dockerfile.broker
+++ b/infra/Dockerfile.broker
@@ -1,5 +1,8 @@
-# Dockerfile for bond WebSocket broker
+# Dockerfile for Bond WebSocket broker
 FROM python:3.11-slim
+
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1
 
 WORKDIR /app
 
@@ -8,14 +11,12 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
-COPY . .
-
-# Copy startup script (shared with API for parity in Railway)
-COPY infra/start-api.sh /start-api.sh
-RUN chmod +x /start-api.sh
+COPY apps ./apps
+COPY engine ./engine
+COPY infra ./infra
 
 # Expose port
 EXPOSE 8080
 
 # Run broker server
-CMD ["/start-api.sh", "broker"]
+CMD ["uvicorn", "apps.broker.broker:app", "--host", "0.0.0.0", "--port", "8080"]
