pretty good version lmao: improved NLP, Added customization while streams are open, got Twitter working again, added in new UI, got buttons (start stop stream) active, gave more info from the streams source on data types, showed a "last message" window to verify stream design

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ PUBLIC_WS_BASE=ws://localhost:8080/ws
 # ⚠️  MUST change in production - use strong random value
 BOND_SECRET=bond-dev-secret-change-in-production
 
+# DeepSeek API key for NL parsing (required for natural_language requests)
+DEEPSEEK_API_KEY=sk-82113664eaea4eb78ecb0df7c937e875
+
 # Token TTL (seconds, default 3600 = 1 hour)
 BOND_TOKEN_TTL=3600
 
