--- a/requirements.txt
+++ b/requirements.txt
@@ -32,10 +32,14 @@ grpcio-tools==1.60.0
 protobuf==4.25.1
 
 # JSON serialization
-orjson==3.9.12
+orjson==3.9.15
 
 # Development
 pytest==7.4.4
 pytest-asyncio==0.23.3
 mypy==1.8.0
 flake8==7.0.0
+
+# NLP orchestration
+langchain==0.2.12
+langchain-openai==0.1.17
