--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@
 # Core framework
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
-pydantic==2.5.3
+pydantic>=2.11.7,<3.0
 
 # Data sources
 ccxt==4.2.25
