--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,9 +44,10 @@ requires-python = ">=3.11"
 dependencies = [
   "fastapi>=0.109.0",
   "uvicorn[standard]>=0.27.0",
-  "pydantic>=2.5.3",
+  "pydantic>=2.7.4,<3",
   "ccxt>=4.2.25",
   "websockets>=12.0",
+  "hyperliquid-python-sdk>=0.20.1",
   "redis[hiredis]>=5.0.1",
   "httpx>=0.26.0",
   "grpcio>=1.60.0",
