--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,7 +74,7 @@ Changelog = "https://github.com/OliverTaylor246/Ekko/blob/main/CHANGELOG.md"
 
 [tool.setuptools.packages.find]
 where = ["sdk/python"]
-include = ["ekko*"]
+include = ["ekko*", "kk0*"]
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
