--- a/infra/Dockerfile.broker
+++ b/infra/Dockerfile.broker
@@ -28,7 +28,8 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
-COPY requirements.txt .
+COPY requirements.txt requirements.txt
+COPY requirements requirements
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Install Playwright browsers during image build
